style(Intro): fixed text alignment

--- a/src/components/intro/_style.scss
+++ b/src/components/intro/_style.scss
@@ -18,6 +18,7 @@
   }
 
   .content {
+    align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
